# opgl2

./: ..gitmodules.swp  .gitmodules  CMakeLists.txt  README.md  h
dependance/: Shader.h  Shader.hpp  Shader.inl  glad.h
shader/triangle/: tr.fs  tr.vs
src/: Shader.cpp  glad.c  main.cpp
